[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ksql"
description = "A Python wrapper for the KSQL REST API"
authors = ["Bryan Yang <kenshin200528@gmail.com>"]
version = "0.10.2"
packages = [
    { include="ksql" },
]

[tool.poetry.dependencies]
python = "~=3.9.0"
requests = "^2.27.1"
six = "^1.16.0"
urllib3 = "^1.26.9"
hyper = "^0.7.0"
